gcc/testsuite/gcc.target/aarch64/cpu-diagnostics-3.c
/* { dg-error "unknown" "" {target "aarch64*-*-*" } } */
/* { dg-options "-O2 -mcpu=example-1+dummy" } */

void f ()
{
  return;
}
